--- a/templates/content_01.html
+++ b/templates/content_01.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>新聞管理系統</title>
-        <link rel="stylesheet" type="text/css" href="/static/site.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/site.css" />
     </head>
     <body >
      <tr><div style=" height: 24px; background-color:#ecf1fc ; padding:10px ;margin-bottom: 5px; ">
@@ -27,7 +27,7 @@
   <p >
   
 
-<textarea  rows="7" cols="50" style="font-size:37px;color:orange;" name= content id = content  placeholder="Write some description here...">
+<textarea  rows="7" cols="50" style="font-size:35px;color:orange;" name= content id = content  placeholder="Write some description here...">
 </textarea></p>
 
 </form>
