--- a/templates/content_update.html
+++ b/templates/content_update.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>新聞管理系統</title>
-        <link rel="stylesheet" type="text/css" href="/static/site.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/site.css" />
     </head>
     <body>
      <tr><div style=" height: 24px; background-color:#ecf1fc ; padding:10px ;margin-bottom: 5px; ">
@@ -29,7 +29,7 @@ window.onload = function () {
 
   <tr>
   <p>內文:</p>  
-  <p><textarea style="font-size:37px;color:orange;" name= content id = content cols="50" rows="7">
+  <p><textarea style="font-size:35px;color:orange;" name= content id = content cols="50" rows="7">
   {{ content }}
 </textarea></p>
 </tr>
